made changes to many files and added needful files

--- a/public/css/createGig.css
+++ b/public/css/createGig.css
@@ -1,317 +1,27 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+input[type="text"] {
+  border: none;
+  border-bottom: 2px solid rgb(163 163 163);
 }
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+
+input[type="number"] {
+  border: none;
+  border-bottom: 2px solid rgb(163 163 163);
+}
+
+.hide-the-group {
+  display: none !important;
+}
+
+.show-the-group {
+  display: block !important;
+}
+
+textarea {
+  border-radius: 5px !important;
+  border: 2px solid rgb(163 163 163);
+}
+
+.OOAAAC {
   display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&family=Ubuntu:wght@300&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Titillium+Web:wght@200&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500&display=swap');
-
-input[type='text'],
-input[type='password'],
-textarea,
-select {
-  outline: none;
-}
-
-body {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.gig--card {
-  height: 80%;
-  /* margin: 0 auto; */
-  max-width: 80%;
-  width: 50%;
-  padding: 50px;
-  /* border: 2px solid red; */
-  display: flex;
-  justify-content: center;
-}
-
-.input-wrapper {
-  display: flex;
-  gap: 5rem;
-  justify-content: space-between;
-  /* border: 2px solid blue; */
-}
-
-.form--submit--button {
-  padding: 8px 20px;
-  font-family: 'Maven Pro', sans-serif;
-  color: #127eea;
-  font-size: medium;
-  border: 1px solid gray;
-  border-radius: 5px;
-}
-
-button:hover {
-  cursor: pointer;
-  box-shadow: 0 0 2px 3px #90caf9;
-  color: whitesmoke;
-  background-color: #7371fc;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
-
-.main--flex--col {
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
-}
-
-label {
-  font-family: 'Inconsolata';
-  font-family: 'Concert One';
-  padding: 10px;
-  font-size: medium;
-  font-weight: 100;
-  /* font-family: "Ubuntu", sans-serif; */
-  font-family: 'Ubuntu', sans-serif;
-}
-
-input,
-textarea {
-  padding: 9px;
-  width: auto;
-  border-width: 2px;
-  border-radius: 5px;
-  border-color: #90e0ef;
-}
-
-body > div > form > div:nth-child(4) {
-  align-self: center;
-}
-
-input[type='text']:focus {
-  border-color: #e0efde;
-  box-shadow: -2px 3px 1px #007ea7;
-}
-input:hover,
-textarea:hover {
-  box-shadow: -2px 3px 3px #007ea7;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  background-image: url('https://images.unsplash.com/photo-1599249300675-c39f1dd2d6be?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGNyZWF0ZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  backdrop-filter: blur(5px);
-  /* backdrop-filter: blur(13px);
-    loving this property
-  */
-}
-
-.gig--card {
-  border-radius: 10px;
-  background-color: #0c1e35;
-  box-shadow: 0 0 10px 10px rgba(106, 165, 165, 0.76);
-  padding: 70px;
-}
-
-.gig--card:hover {
-  background-color: #0c1e35;
-  transition-delay: 200ms;
-  transition-property: box-shadow;
-}
-
-.gig--card:hover {
-  box-shadow: 0 0 10px 10px rgba(106, 165, 165, 0.76);
-}
-form {
-  color: white;
-  text-shadow: 0 0 1px #e0efde;
-}
-
-.form--submit--button {
-  transition-delay: 50ms;
-  transition-property: transform;
-}
-
-.form--submit--button:hover {
-  transform: translateY(-2px);
-}
-
-input,
-textarea {
-  color: #000;
-  padding: 10px;
-  font-size: medium;
-  /* background-color: #d6ccc2; */
-  background-color: #476599;
-  transition-delay: 100ms;
-}
-
-textarea {
-  width: 183px;
-  border-radius: 5px;
-  padding: 15px;
-  font-size: medium;
-}
-input:hover,
-textarea:hover {
-  transform: translateY(-5px);
-}
-
-button {
-  margin-top: 10px;
-}
-
-textarea:hover {
-  box-shadow: -3px 3px 3px #04516a;
-}
-
-.highlight--wrapper {
-  margin-top: 20px;
-}
-
-textarea {
-  font-size: large;
-  font-weight: 400;
-}
-
-form {
-  max-width: 100%;
-}
-
-input,
-textarea {
-  background-color: #9796d2;
+  margin: 0 auto;
 }
