--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -25,104 +25,30 @@
 
   <%- include('../partials/navbar.ejs',{isLoggedIn:loggedIn}) %>
 
-  <div style="margin: 0 auto;display: flex;flex-direction: column;justify-content: space-evenly;align-items: center;">
-    <div class="trend">
-      <h1 style="font-size: xx-large;color: #fafafa;">Popular services</h1>
-    </div>
+    <div style="margin: 0 auto;display: flex;flex-direction: column;justify-content: space-evenly;align-items: center;">
+      <div class="trend">
+        <h1 style="font-size: xx-large;color: #fafafa;">Popular services</h1>
+      </div>
 
-    <div style="padding-top: 50px; padding-bottom: 50px;" class="boxes">
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="box1">
-              <div class="image">
-                <img src="./images/appdev.jpg" alt="app development" />
-              </div>
-              <div class="content">
-                <h3>APP Development</h3>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea
-                  nihil deleniti qui accusamus esse corporis? Minus possimus
-                  culpa aspernatur rerum.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="box2">
-              <div class="image">
-                <img src="./images/gamedev.png" alt="game development" />
-              </div>
-              <div class="content">
-                <h3>GAME Development</h3>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea
-                  nihil deleniti qui accusamus esse corporis? Minus possimus
-                  culpa aspernatur rerum.
-                </p>
+      <div style="padding-top: 50px; padding-bottom: 50px;" class="boxes">
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <% services.forEach(s=>{ %>
+              <div class="swiper-slide">
+                <div class="box">
+                  <div class="image">
+                    <img src="<%= s.main_img %>" alt="app development" />
+                  </div>
+                  <div class="content">
+                    <h3>
+                      <%= s.service_type.replace('_',' ').toUpperCase() %></h3>
+                  <p>
+                    <%= s.seller_desc %>
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="box3">
-              <div class="image">
-                <img src="./images/webdev.jpg" alt="web development" />
-              </div>
-              <div class="content">
-                <h3>WEB Development</h3>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea
-                  nihil deleniti qui accusamus esse corporis? Minus possimus
-                  culpa aspernatur rerum.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="box4">
-              <div class="image">
-                <img src="./images/cloud_computing.png" alt="cloud computing" />
-              </div>
-              <div class="content">
-                <h3>CLOUD Computing</h3>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea
-                  nihil deleniti qui accusamus esse corporis? Minus possimus
-                  culpa aspernatur rerum.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="box5">
-              <div class="image">
-                <img src="./images/embedded_systems.jpeg" alt="Embedded systems" />
-              </div>
-              <div class="content">
-                <h3>EMBEDDED Systems</h3>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea
-                  nihil deleniti qui accusamus esse corporis? Minus possimus
-                  culpa aspernatur rerum.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="box6">
-              <div class="image">
-                <img src="./images/webdev.jpg" alt="Video editing" />
-              </div>
-              <div class="content">
-                <h3>VIDEO Editing</h3>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea
-                  nihil deleniti qui accusamus esse corporis? Minus possimus
-                  culpa aspernatur rerum.
-                </p>
-              </div>
-            </div>
-          </div>
+          <% }) %>
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
@@ -148,7 +74,7 @@
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <div class="box1">
+              <div class="box">
                 <div class="image">
                   <img src="./images/appdev.jpg" alt="app development" />
                 </div>
@@ -163,7 +89,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="box2">
+              <div class="box">
                 <div class="image">
                   <img src="./images/gamedev.png" alt="game development" />
                 </div>
@@ -178,7 +104,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="box3">
+              <div class="box">
                 <div class="image">
                   <img src="./images/webdev.jpg" alt="web development" />
                 </div>
@@ -193,7 +119,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="box4">
+              <div class="box">
                 <div class="image">
                   <img src="./images/cloud_computing.png" alt="cloud computing" />
                 </div>
@@ -208,7 +134,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="box5">
+              <div class="box">
                 <div class="image">
                   <img src="./images/embedded_systems.jpeg" alt="Embedded systems" />
                 </div>
@@ -223,7 +149,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="box6">
+              <div class="box">
                 <div class="image">
                   <img src="./images/webdev.jpg" alt="Video editing" />
                 </div>
