--- a/views/pages/dash.ejs
+++ b/views/pages/dash.ejs
@@ -5,12 +5,12 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/css/dash2.css" type="text/css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
-    referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="/css/styles.css" type="text/css">
   <link rel="stylesheet" href="/css/new_categories.css" type="text/css">
 
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>User Dashboard</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,306 +20,250 @@
 
   <%- include('../partials/navbar.ejs',{isLoggedIn:true}) %>
 
-    <div class="sidebar">
-      <div class="logo-details">
-        <i class='bx bxl-c-plus-plus'></i>
-        <span class="logo_name">Lancify</span>
-      </div>
-      <ul class="nav-links">
-        <li>
-          <a href="/" class="active">
-            <i class='bx bx-home'></i>
-            <span class="links_name">Home</span>
-          </a>
-        </li>
-        <li>
-          <a href="#" class="active">
-            <i class='bx bx-grid-alt'></i>
-            <span class="links_name">Dashboard</span>
-          </a>
-        </li>
-        <li>
-          <a href="#" id="profile">
-            <i class='bx bx-user'></i>
-            <span class="links_name">Profile</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class='bx bx-cog'></i>
-            <span class="links_name">Setting</span>
-          </a>
-        </li>
-        <li class="log_out">
-          <a href="#">
-            <i class='bx bx-log-out'></i>
-            <span class="links_name">Log out</span>
-          </a>
-        </li>
-      </ul>
+  <div class="p-2 flex flex-row w-full justify-center w-full">
+    <ul class="p-2 flex flex-row justify-between items-center">
+      <li style="list-style: none;" class="p-3">
+        <a href="/" class="active" style="text-decoration: none; color: black;">
+          <i class='bx bx-home'></i>
+          <span class="links_name">Home</span>
+        </a>
+      </li>
+      <li style="list-style: none;" class="p-3">
+        <a href="#" class="active" id="dash-default" style="text-decoration: none; color: black;">
+          <i class='bx bx-grid-alt'></i>
+          <span class="links_name">Dashboard</span>
+        </a>
+      </li>
+      <li style="list-style: none;" class="p-3">
+        <a href="#" id="profile" style="text-decoration: none; color: black;">
+          <i class='bx bx-user'></i>
+          <span class="links_name">Profile</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="section--hero current-active the-overview bg-dark_green text-white">
+    <div class="main--heading">
+      <h2 class="waver">Hey There Fellow Lancifier 
+        <img src="https://media.tenor.com/nebZyl8oN7IAAAAi/wave-hello.gif" style="display: inline;" class="emo"
+          alt="hand">
+
+      </h2>
     </div>
 
-    <!-- 
-
-      
-  <section class="home-section">
-    <nav>
-      <div class="sidebar-button">
-        <i class='bx bx-menu sidebarBtn'></i>
-        <span class="dashboard">Dashboard</span>
-      </div>
-  
-      <div class="profile-details">
-        <img src="images/profile.jpg" alt="">
-        <span class="admin_name">Prem Shahi</span>
-        <i class='bx bx-chevron-down'></i>
-      </div>
-    </nav>
-
-    <div class="home-content">
-      <div class="overview-boxes">
-        <div class="box">
-          <div class="right-side">
-            <div class="box-topic">Project in process</div>
-            <div class="number">2</div>
-            <div class="indicator">
-
-
-            </div>
-          </div>
-
-        </div>
-        <div class="box">
-          <div class="right-side">
-            <div class="box-topic">Project Completed</div>
-            <div class="number">20</div>
-            <div class="indicator">
-
-
-            </div>
-          </div>
-
-        </div>
-        <div class="box">
-          <div class="right-side">
-            <div class="box-topic">Rating</div>
-            <div class="number">8.7</div>
-            <div class="indicator">
-
-
-            </div>
-          </div>
-
-        </div>
-        <div class="box">
-          <div class="right-side">
-            <div class="box-topic">Total Credits</div>
-            <div class="number">2,000</div>
-
-          </div>
-
-        </div>
-      </div>
-
-      <div class="gig-boxes">
-        <div class="recent-gig box">
-          <div class="title">GIGS</div>
-          <div class="gig-details">
-
-            <div>
-              <h3> <i class='bx bx-code-alt'></i> Programming and tech </h3>
-              <h3> <i class='bx bxs-paint'></i> Graphics and design </h3>
-              <h3> <i class='bx bx-bar-chart-alt'></i> Content & digital writing </h3>
-              <h3> <i class='bx bx-code-alt'></i> Video and animation </h3>
-
-            </div>
-          </div>
-
-
-
-        </div>
-
-      </div>
-
-    </div>
-    </div>
-  </section>
-
-     -->
-    <div class="section--hero current-active the-overview">
-      <div class="main--heading">
-        <h2 class="waver">Hey Dev</h2>
-        <img src="https://media.tenor.com/nebZyl8oN7IAAAAi/wave-hello.gif" class="emo" alt="hand">
-      </div>
-
-      <div class="head--customer--info">
-        <h3>Your growth & progess so far</h3>
-      </div>
-
-      <div class="alig-horz">
-        <div class="item--flex-in">
-          <div class="title-head">
-            Ongoing Projects 🔥
-          </div>
-          <div class="count">
-            2
-          </div>
-        </div>
-
-        <div class="item--flex-in">
-          <div class="title-head">
-            Completed Projects 🔗
-          </div>
-          <div class="count">
-            20
-          </div>
-        </div>
-
-        <div class="item--flex-in">
-          <div class="title-head">
-            Ratings®️ (20)
-          </div>
-          <div class="count">
-            4.7
-          </div>
-        </div>
-      </div>
-
-      <div class="about--community">
-
-      </div>
-
+    <div class="head--customer--info">
+      <h3>Your growth & progess so far</h3>
     </div>
 
-    <div class="section--hero the-profile current-not-active">
-      <div class="main--heading">
-        <h2 class="waver">Your gigs</h2>
-        <img src="https://media.tenor.com/nebZyl8oN7IAAAAi/wave-hello.gif" class="emo" alt="hand">
+    <div class="alig-horz text-dark_green">
+      <div class="item--flex-in">
+        <div class="title-head">
+          Ongoing Projects 🔥
+        </div>
+        <div class="count">
+          <%= seller.ongoing %>
+        </div>
       </div>
 
-      <div class="head--customer--info">
-        <h3>Gigs done so far ...</h3>
+      <div class="item--flex-in">
+        <div class="title-head">
+          Completed Projects 🔗
+        </div>
+        <div class="count">
+          <%= seller.completed %>
+        </div>
       </div>
 
-      <div class="alig-horz">
-        <div class="testing--dash p-2">
-          <div class="title-head my-1">
-            &lt; TITLE OF THE GIG &gt;
+      <div class="item--flex-in">
+        <div class="title-head">
+          Ratings®️ (<%= seller.numberRating %>)
+        </div>
+        <div class="count">
+          <%= seller.rating %>
+        </div>
+      </div>
+
+      <div class="item--flex-in">
+        <div class="title-head">
+          Account Balance
+        </div>
+        <div class="count">
+          <%= seller.balance %>
+        </div>
+      </div>
+    </div>
+
+    <div class="main--heading">
+      <h2 class="waver">Your gigs
+        <img src="https://media.tenor.com/nebZyl8oN7IAAAAi/wave-hello.gif" class="emo" alt="hand"
+          style="display: inline;">
+      </h2>
+    </div>
+
+    <div class="alig-horz text-dark_green" >
+      <% for( let index=0; index < gigs.length; index++ ) { %>
+        <div class="testing--dash p-2 cursor-pointer text-center some">
+          <div>
+            <img src="<%= gigs[index]['main_img'] %>" alt="Service picture">
           </div>
-          <div class="description mx-2 px-4 py-1 my-1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, libero officiis itaque natus vel nihil
-            cupiditate aspernatur fugit impedit perferendis aliquam numquam maxime, optio earum. Quia non quod tenetur
-            quidem?
+          <p class="hidden" id="previewGig"><%= gigs[index]['_id'] %></p>
+          <div class="description mx-2 px-4 py-1 my-1 text-center">
+            <%= gigs[index]['seller_title'] %>
           </div>
           <div class="price count">
-            &lt; PRICE OF THE GIG &gt;
+            Starting Price : ₹<%=gigs[index]['starting_price'] %>
           </div>
         </div>
-
-
-
+        <% } %>
       </div>
-
-
-      <section class="profile-section" style="display: none;">
-
-        <nav>
-          <div class="sidebar-button">
-            <i class='bx bx-menu sidebarBtn'></i>
-            <span class="dashboard">Dashboard</span>
-          </div>
-
-          <div class="profile-details">
-            <img src="images/profile.jpg" alt="">
-            <span class="admin_name">Prem Shahi</span>
-            <i class='bx bx-chevron-down'></i>
-          </div>
-        </nav>
-
-        <div class="container mt-5">
-
-          <div class="row d-flex justify-content-center">
-
-            <div class="col-md-7">
-
-              <div class="card p-3">
-
-                <div class="text-center">
-                  <img src="https://i.imgur.com/bDLhJiP.jpg" width="100" class="rounded-circle">
+      <button class="btn bg-white text-dark_green" onclick="window.location.href = '/app/create-gig'"> Create A Gig! </button>
+    <div class="main--heading">
+      <h2 class="waver">Your completed orders</h2>
+    </div>
+  
+    <div class="alig-horz text-dark_green">
+        <% if(orders.length > 0) { %>
+            <% for( let index=0; index < orders.length; index++ ) { %>
+                <div class="testing--dash p-2 cursor-pointer text-center completed">
+                    <div>
+                        <img src="<%= orders[index].service_id.main_img %>" alt="Service picture">
+                    </div>
+                    <p class="hidden" id="viewFinishedOrder"><%= orders[index]['_id'] %></p>
+                    <div class="description mx-2 px-4 py-1 my-1 text-center">
+                        <%= orders[index].service_id.seller_title %>
+                    </div>
+                    <div class="price count">
+                        Buyer : <%= orders[index].user_name %>
+                    </div>
                 </div>
-
-                <div class="text-center mt-3">
-                  <span class="bg-secondary p-1 px-4 rounded text-white">Pro</span>
-                  <h5 class="mt-2 mb-0">Alexender Schidmt</h5>
-                  <span>UI/UX Designer</span>
-
-                  <div class="px-4 mt-1">
-                    <p class="fonts">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                      magna
-                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                      commodo consequat. </p>
-
-                  </div>
-
-                  <ul class="social-list">
-                    <li><i class="fa fa-facebook"></i></li>
-                    <li><i class="fa fa-dribbble"></i></li>
-                    <li><i class="fa fa-instagram"></i></li>
-                    <li><i class="fa fa-linkedin"></i></li>
-                    <li><i class="fa fa-google"></i></li>
-                  </ul>
-
-                  <div class="buttons">
-                    <button class="btn btn-outline-primary px-4">Update Profile</button>
-                    <button class="btn btn-primary px-4 ms-3">Contact</button>
-                  </div>
+            <% } %>
+        <% } else { %>
+            <h1 class="text-center text-white mx-auto text-2xl"> No completed Orders!</h1>
+        <% } %> 
+    </div>
+  
+    <div class="main--heading">
+      <h2 class="waver">Your ongoing orders</h2>
+    </div>
+  
+    <div class="alig-horz text-dark_green">
+        <% if(ongoing.length > 0) { %>
+            <% for( let index=0; index < ongoing.length; index++ ) { %>
+                <div class="testing--dash p-2 cursor-pointer text-center ongoing">
+                    <div>
+                        <img src="<%= ongoing[index].service_id.main_img %>" alt="Service picture">
+                    </div>
+                    <p class="hidden" id="viewOngoingOrder"><%= ongoing[index]['_id'] %></p>
+                    <div class="description mx-2 px-4 py-1 my-1 text-center">
+                        <%= ongoing[index].service_id.seller_title %>
+                    </div>
+                    <div class="price count">
+                        Buyer : <%= ongoing[index].user_name %>
+                    </div>
                 </div>
+            <% } %>
+        <% } else { %>
+            <h1 class="text-center text-white mx-auto text-2xl"> No pending Orders!</h1>
+        <% } %> 
+    </div>
+  </div>
+
+  <div class="section--hero the-profile current-not-active bg-dark_green text-white">
+    <section class="profile-section text-dark_green w-full py-0">
+      <div class="container mt-5">
+
+
+        <div class="row d-flex justify-content-center">
+
+          <div class="col-md-7">
+
+            <div class="card p-3">
+
+              <div class="text-center flex mx-auto">
+                <img src="<%= user.user_img %>" class="w-14 h-14 rounded-full flex-shrink-0 object-cover object-center">
               </div>
 
+              <div class="text-center mt-3">
+                <span class="bg-secondary p-1 px-4 rounded text-white">Pro</span>
+                <h5 class="mt-2 mb-0"><%= user.username %></h5>
+
+                <div class="px-4 mt-1">
+                  <p class="fonts"><%= seller.seller_desc %></p>
+                </div>
+
+                <ul class="social-list">
+                  <li><i class="fa fa-github"></i></li>
+                  <li><i class="fa fa-facebook"></i></li>
+                  <li><i class="fa fa-linkedin"></i></li>
+                </ul>
+
+                <div class="buttons">
+                  <button class="btn btn-outline-primary px-4" onclick="window.location.href='/app/edit'">Update Profile</button>
+                  <button class="btn btn-outline-primary px-4" onclick="window.location.href='/app/delete'">Delete Profile</button>
+                </div>
+              </div>
             </div>
 
           </div>
 
         </div>
-      </section>
 
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-        crossorigin="anonymous"></script>
+      </div>
+    </section>
+  </div>
 
-      <script>
-        let sidebar = document.querySelector(".sidebar");
-        let sidebarBtn = document.querySelector(".sidebarBtn");
-        sidebarBtn.onclick = function () {
-          sidebar.classList.toggle("active");
-          if (sidebar.classList.contains("active")) {
-            sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
-          } else
-            sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
-        }
+  <%- include('../partials/footer.ejs') %>
 
-        document.querySelector('body > div.sidebar > ul > li:nth-child(2) > a').addEventListener('click', e => {
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
 
-          document.querySelector('.the-profile').classList.remove('current-active');
-          document.querySelector('.the-profile').classList.add('current-not-active');
-          document.querySelector('.the-overview').classList.add('current-active');
+  <script>
+
+    document.querySelector('#dash-default').addEventListener('click', e => {
+
+      document.querySelector('.the-profile').classList.remove('current-active');
+      document.querySelector('.the-profile').classList.add('current-not-active');
+      document.querySelector('.the-overview').classList.add('current-active');
+    })
+
+    document.getElementById('profile').addEventListener('click', (e) => {
+      document.querySelector('.the-profile').classList.add('current-active');
+      document.querySelector('.the-profile').classList.remove('current-not-active');
+      document.querySelector('.the-overview').classList.add('current-not-active');
+      document.querySelector('.the-overview').classList.remove('current-active')
+
+    });
+
+    const some = document.getElementsByClassName('some');
+    Array.from(some).forEach((s)=>{
+        s.addEventListener('click', () => {
+            const id = s.querySelector('#previewGig').innerHTML;
+            window.location.href = `/app/product/${id}/preview`;
         })
+    })
 
-        document.getElementById('profile').addEventListener('click', (e) => {
-          // document.getElementsByClassName('profile-section')[0].style.display = 'block';
-          // document.getElementsByClassName('home-section')[0].style.display = 'none';
-          document.querySelector('.the-profile').classList.add('current-active');
-          document.querySelector('.the-profile').classList.remove('current-not-active');
-          document.querySelector('.the-overview').classList.add('current-not-active');
-          document.querySelector('.the-overview').classList.remove('current-active')
+    const ongoing = document.getElementsByClassName('ongoing');
+    Array.from(ongoing).forEach((s)=>{
+        s.addEventListener('click', () => {
+            const id = s.querySelector('#viewOngoingOrder').innerHTML;
+            window.location.href = `/app/order/${id}`;
+        })
+    })
+    
+    const completed = document.getElementsByClassName('completed');
+    Array.from(completed).forEach((s)=>{
+        s.addEventListener('click', () => {
+            const id = s.querySelector('#viewFinishedOrder').innerHTML;
+            window.location.href = `/app/order/${id}`;
+        })
+    })
+  </script>
 
-        });
-      </script>
-
-      <%- include('../partials/footer.ejs') %>
 
 </body>
 
