--- a/views/pages/discussions.ejs
+++ b/views/pages/discussions.ejs
@@ -54,9 +54,7 @@
 
             <div class="flex flex-1 flex-col justify-center object-contain py-2">
                 <div class="h-[50px] w-full bg-light_green">
-                    <h1 class="font-bold font-poppins text-center font-bold text-xl text-dark">Hi there! Welcome to Web
-                        Dev
-                        Discussion Forum</h1>
+                    <h1 class="font-bold font-poppins text-center font-bold text-xl text-dark">Hi there! Welcome to <%= dis.forum.replace('_',' ').toUpperCase() %> Discussion Forum</h1>
                 </div>
 
                 <section class="bg-gray py-3 lg:py-7">
@@ -85,7 +83,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div></div>
+                                        <div class="hidden" id="dis_id"><%= dis._id %></div>
                                         <div></div>
                                     </div>
                                 </div>
@@ -114,7 +112,7 @@
                                     <button class="rounded hover:bg-light_green cursor-pointer p-3" id="commentToggle">
                                         <i class="fa-regular fa-comments"></i>
                                         <span>
-                                            <%= length %> Comments
+                                            <%= comments.length %> Comment(s)
                                         </span>
                                     </button>
                                 </div>
@@ -153,100 +151,60 @@
                     </div>
                 </section>
 
-                <!-- comments -->
-                <% if(discussions.length> 0) { %>
-                    <section id="tog" style="display: none;">
-                        <% discussions.forEach((discussion)=>{ %>
-                            <% if (discussion !==undefined) { %>
-                                <% console.log(discussion.user) %>
-                                <div
-                                    class="flex-col w-full py-4 mx-auto bg-white border-b-2 border-r-2 border-gray-200 sm:px-4 sm:py-4 md:px-4 sm:rounded-lg sm:shadow-sm md:w-2/3">
-                                    <div class="flex flex-row">
-                                        <img class="object-cover w-12 h-12 border-2 border-gray-300 rounded-full"
-                                            alt="Noob master's avatar" src="<%= discussion.user.image %>">
-                                        <div class="flex-col mt-1">
-                                            <div class="flex items-center flex-1 px-4 font-bold leading-tight">
-                                                <%= discussion.user.name %>
-                                                    <span class="ml-2 text-xs font-normal text-gray-500">
-                                                        <%= discussion.time %>
-                                                    </span>
-                                            </div>
-                                            <div
-                                                class="flex-1 px-2 ml-2 text-sm font-medium leading-loose text-gray-600">
-                                                <%= discussion.comment %>
-                                            </div>
-                                            <button class="inline-flex items-center px-1 pt-2 ml-1 flex-column">
-                                                <svg class="w-5 h-5 ml-2 text-gray-600 cursor-pointer fill-current hover:text-gray-900"
-                                                    viewBox="0 0 95 78" xmlns="http://www.w3.org/2000/svg">
-                                                    <path
-                                                        d="M29.58 0c1.53.064 2.88 1.47 2.879 3v11.31c19.841.769 34.384 8.902 41.247 20.464 7.212 12.15 5.505 27.83-6.384 40.273-.987 1.088-2.82 1.274-4.005.405-1.186-.868-1.559-2.67-.814-3.936 4.986-9.075 2.985-18.092-3.13-24.214-5.775-5.78-15.377-8.782-26.914-5.53V53.99c-.01 1.167-.769 2.294-1.848 2.744-1.08.45-2.416.195-3.253-.62L.85 30.119c-1.146-1.124-1.131-3.205.032-4.312L27.389.812c.703-.579 1.49-.703 2.19-.812zm-3.13 9.935L7.297 27.994l19.153 18.84v-7.342c-.002-1.244.856-2.442 2.034-2.844 14.307-4.882 27.323-1.394 35.145 6.437 3.985 3.989 6.581 9.143 7.355 14.715 2.14-6.959 1.157-13.902-2.441-19.964-5.89-9.92-19.251-17.684-39.089-17.684-1.573 0-3.004-1.429-3.004-3V9.936z"
-                                                        fill-rule="nonzero" />
-                                                </svg>
-                                            </button>
-                                            <button class="inline-flex items-center px-1 -ml-1 flex-column">
-                                                <svg class="w-5 h-5 text-gray-600 cursor-pointer hover:text-gray-700"
-                                                    fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                                                    xmlns="http://www.w3.org/2000/svg">
-                                                    <path stroke-linecap="round" stroke-linejoin="round"
-                                                        stroke-width="2"
-                                                        d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5">
-                                                    </path>
-                                                </svg>
-                                            </button>
+                <div
+                    class="flex-col w-[50%] py-4 mx-auto bg-white border-b-2 border-r-2 border-gray-200 sm:px-4 sm:py-4 md:px-4 sm:rounded-lg sm:shadow-sm md:w-2/3 flex w-full">
+                    <div id="commentBox" class="mx-auto flex justify-center items-center w-full">
+                        <input type="text" class="border-2 flex-1 w-2/3 border-dark_green" placeholder="Enter a comment" id="comment" />
+                        <button type="button" id="submit" class="bg-dark_green w-auto w-1/3 text-white my-3 p-3 rounded text-center mx-auto"> Add Comment! </button>
+                    </div>
+                </div>
+
+                <section id="tog" style="display: none;" class="py-5">
+                    <% if(comments.length > 0) { %>
+                        <h1 class="mx-auto text-3xl mb-3 text-dark_green text-center">Top Comments :-</h1>
+                        <% comments.forEach((comment)=>{ %>
+                            <div
+                                class="flex-col w-full py-4 mx-auto bg-white border-b-2 border-r-2 border-gray-200 sm:px-4 sm:py-4 md:px-4 sm:rounded-lg sm:shadow-sm md:w-2/3 mb-4">
+                                <div class="flex flex-row">
+                                    <img class="object-cover w-12 h-12 border-2 border-gray-300 rounded-full"
+                                        alt="Noob master's avatar" src="<%= comment.user_img %>">
+                                    <div class="flex-col mt-1">
+                                        <div class="flex items-center flex-1 px-4 font-bold leading-tight">
+                                            <%= comment.user_name %>
+                                                <span class="ml-2 text-xs font-normal text-gray-500">
+                                                    <%= comment.time %>
+                                                </span>
                                         </div>
+                                        <div
+                                            class="flex-1 px-2 ml-2 text-sm font-medium leading-loose text-gray-600">
+                                            <%= comment.comment %>
+                                        </div>
+                                        <button class="inline-flex items-center px-1 pt-2 ml-1 flex-column">
+                                            <svg class="w-5 h-5 ml-2 text-gray-600 cursor-pointer fill-current hover:text-gray-900"
+                                                viewBox="0 0 95 78" xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M29.58 0c1.53.064 2.88 1.47 2.879 3v11.31c19.841.769 34.384 8.902 41.247 20.464 7.212 12.15 5.505 27.83-6.384 40.273-.987 1.088-2.82 1.274-4.005.405-1.186-.868-1.559-2.67-.814-3.936 4.986-9.075 2.985-18.092-3.13-24.214-5.775-5.78-15.377-8.782-26.914-5.53V53.99c-.01 1.167-.769 2.294-1.848 2.744-1.08.45-2.416.195-3.253-.62L.85 30.119c-1.146-1.124-1.131-3.205.032-4.312L27.389.812c.703-.579 1.49-.703 2.19-.812zm-3.13 9.935L7.297 27.994l19.153 18.84v-7.342c-.002-1.244.856-2.442 2.034-2.844 14.307-4.882 27.323-1.394 35.145 6.437 3.985 3.989 6.581 9.143 7.355 14.715 2.14-6.959 1.157-13.902-2.441-19.964-5.89-9.92-19.251-17.684-39.089-17.684-1.573 0-3.004-1.429-3.004-3V9.936z"
+                                                    fill-rule="nonzero" />
+                                            </svg>
+                                        </button>
+                                        <button class="inline-flex items-center px-1 -ml-1 flex-column">
+                                            <svg class="w-5 h-5 text-gray-600 cursor-pointer hover:text-gray-700"
+                                                fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path stroke-linecap="round" stroke-linejoin="round"
+                                                    stroke-width="2"
+                                                    d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5">
+                                                </path>
+                                            </svg>
+                                        </button>
                                     </div>
-                                    <% while(JSON.stringify(discussion.next) !=='{}' ) { %>
-                                        <% discussion=discussion.next %>
-                                            <% if(discussion && discussion !==undefined) { %>
-                                                <% console.log(discussion.user) %>
-                                                <div class="flex flex-row pt-1 md-10 md:ml-<%= start_margin %>">
-                                                    <img class="w-12 h-12 border-2 border-gray-300 rounded-full"
-                                                        alt="Emily's avatar" src="<%= discussion.user.image %>">
-                                                    <div class="flex-col mt-1">
-                                                        <div
-                                                            class="flex items-center flex-1 px-4 font-bold leading-tight">
-                                                            <%= discussion.user.name %>
-                                                                <span class="ml-2 text-xs font-normal text-gray-500">
-                                                                    <%= discussion.time %>
-                                                                </span>
-                                                        </div>
-                                                        <div
-                                                            class="flex-1 px-2 ml-2 text-sm font-medium leading-loose text-gray-600">
-                                                            <%= discussion.comment %>
-                                                        </div>
-                                                        <button
-                                                            class="inline-flex items-center px-1 pt-2 ml-1 flex-column">
-                                                            <svg class="w-5 h-5 ml-2 text-gray-600 cursor-pointer fill-current hover:text-gray-900"
-                                                                viewBox="0 0 95 78" xmlns="http://www.w3.org/2000/svg">
-                                                                <path
-                                                                    d="M29.58 0c1.53.064 2.88 1.47 2.879 3v11.31c19.841.769 34.384 8.902 41.247 20.464 7.212 12.15 5.505 27.83-6.384 40.273-.987 1.088-2.82 1.274-4.005.405-1.186-.868-1.559-2.67-.814-3.936 4.986-9.075 2.985-18.092-3.13-24.214-5.775-5.78-15.377-8.782-26.914-5.53V53.99c-.01 1.167-.769 2.294-1.848 2.744-1.08.45-2.416.195-3.253-.62L.85 30.119c-1.146-1.124-1.131-3.205.032-4.312L27.389.812c.703-.579 1.49-.703 2.19-.812zm-3.13 9.935L7.297 27.994l19.153 18.84v-7.342c-.002-1.244.856-2.442 2.034-2.844 14.307-4.882 27.323-1.394 35.145 6.437 3.985 3.989 6.581 9.143 7.355 14.715 2.14-6.959 1.157-13.902-2.441-19.964-5.89-9.92-19.251-17.684-39.089-17.684-1.573 0-3.004-1.429-3.004-3V9.936z"
-                                                                    fill-rule="nonzero" />
-                                                            </svg>
-                                                        </button>
-                                                        <button class="inline-flex items-center px-1 -ml-1 flex-column">
-                                                            <svg class="w-5 h-5 text-gray-600 cursor-pointer hover:text-gray-700"
-                                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                                                                fill="currentColor">
-                                                                <path
-                                                                    d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z" />
-                                                            </svg>
-                                                        </button>
-                                                    </div>
-                                                </div>
-                                            <% } %>
-                                    <% start_margin=start_margin + 2 %>
-                                <% } %>
                                 </div>
-                                <% } %>
-                                    <% }) %>
-                    </section>
+                            </div>
+                        <% }) %>
                     <% } else { %>
-                        <div
-                            class="flex-col w-4 py-4 mx-auto bg-white border-b-2 border-r-2 border-gray-200 sm:px-4 sm:py-4 md:px-4 sm:rounded-lg sm:shadow-sm md:w-2/3 flex ">
-                            <h1 class="flex justify-center align-center"> Be the first to comment! </h1>
-                            <button id="comment" class="btn bg-dark_green text-white w-1/2 flex-row justify-center items-center">Comment</button>
-                        </div>
-                        <% } %>
+                        <h1 class="text-3xl mx-auto text-center text-dark_green font-bold">No Comments Yet!</h1>
+                    <% } %>
+                </section>
             </div>
         </section>
         <%- include('../partials/footer.ejs') %>
@@ -263,6 +221,31 @@
                     }
 
                 })
+
+                const submit = document.getElementById('submit');
+                submit.addEventListener('click',async(e)=>{
+                    const c = document.getElementById('comment').value;
+                    const d = document.getElementById('dis_id').innerHTML;
+
+                    const res = await fetch(`http://localhost:5500/app/discussions/${d}/addComment`,{
+                        method: 'post',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({message :c})
+                    });
+
+                    if(res.ok) {
+                        alert('comment added successfully!');
+                        window.location.reload();
+                    }
+                    else
+                    {
+                        alert('some error occured');
+                        window.location.reload();
+                    }
+                })
+
             </script>
 </body>
 
