--- a/views/pages/update_seller.ejs
+++ b/views/pages/update_seller.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register As a Seller</title>
+    <title>Update Seller Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -19,6 +19,7 @@
     <%- include('../partials/navbar.ejs',{isLoggedIn:login}) %>
 
     <div class="container">
+        <h1 class="mx-auto text-center text-white text-2xl">Update your Profile!</h1>
         <form id="signUpForm" action="#">
             <div class="form-header d-flex mb-4">
                 <span class="stepIndicator">Personal Details</span>
@@ -27,33 +28,53 @@
             </div>
 
             <!-- step one -->
-            <div class="step form-group row">
+            <div class="step form-group row mx-auto">
                 <p class="text-center mb-4">Provide your Personal Details</p>
                 <div class="mb-3 row">
                     <label for="fullname" class="col-sm-2 col-form-label">Full Name</label>
                     <div class="col">
-                        <input type="text" id="fname" placeholder="First name" oninput="this.className = ''"
+                        <input type="text" id="fname" value="<%= seller.seller_fname %>" placeholder="First name" oninput="this.className = ''"
                             name="fname">
                     </div>
                     <div class="col">
-                        <input type="text" id="lname" placeholder="Last name" oninput="this.className = ''"
+                        <input type="text" id="lname" value="<%= seller.seller_lname %>" placeholder="Last name" oninput="this.className = ''"
                             name="lname">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="description" class="col-sm-2 col-form-label">Description</label>
-                    <textarea name="description" cols="30" rows="10" class="border-2 border-dark_green"
-                        placeholder="Professional Description in abt 50-200 words" id="description"></textarea>
+                    <textarea name="description" cols="30" rows="10"
+                        placeholder="Professional Description in abt 50-200 words" class="border-2 border-dark_green" id="description"><%= seller.seller_desc %></textarea>
                 </div>
                 <div class="mb-3 row">
-                    <label for="photo" class="col-sm-2 col-form-label">Profile Pic</label>
-                    <div class="custom-file col">
-                        <label class="custom-file-label" for="profile">Choose file</label>
-                        <input type="file" class="custom-file-input" id="profile">
+                    <div class="col">
+                        <label for="photo" class="col-form-label">Profile Pic</label>
+                    </div>
+                    <div class="col">
+                        <img src="<%= user.user_img %>" class="w-full h-[50px]" alt="profile">
+                    </div>
+                    <div class="col flex-col justify-center items-center">
+                        <label class="col-form-label flex-row justify-start">Choose file</label>
+                        <input type="file" class="w-full" id="profile">
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="photo" class="col-sm-2 col-form-label">Languages You Speak</label>
+                    <div class="col">
+                        <label for="photo" class=" col-form-label">Languages You Currently Speak</label>
+                    </div>
+                    <div class="col border-2 border-dark_green">
+                        <ul>
+                            <% seller.languages.forEach(l=>{ %>
+                                <li><%= l %></li>
+                            <% }) %>
+                        </ul>
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <div class="col">
+                        <label for="photo" class="col-sm-2 col-form-label">Choose More Languages </label>
+                    </div>
+                    
                     <div class="col flex align-items-center">
                         <select id="languages" multiple="multiple">
                             <option value="None" selected>None</option>
@@ -138,9 +159,12 @@
             <div class="step">
                 <p class="text-center mb-4">Your Skils, Occupation and Experience</p>
                 <div class="mb-3 row">
-                    <label for="occupation" class="col-sm-2 col-form-label">Occupation</label>
                     <div class="col">
-                        <select class="custom-select" id="occupation">
+                        <p id="occupation1" class="hidden"><%= seller.occupation %></p>
+                        <label for="occupation" class="col-sm-2 col-form-label">Occupation</label>
+                    </div>
+                    <div class="col">
+                        <select class="custom-select border-2 border-dark_green" id="occupation">
                             <option selected>None</option>
                             <option value="student">Student</option>
                             <option value="working">Working Professional(>1 yr experience)</option>
@@ -154,28 +178,33 @@
                     <div class="col">
                         <div class="mb-2 row">
                             <div class="col p-3">
-                                <input type="text" id="country" name="country" placeholder="Country of Institute">
+                                <input type="text" value="<%= seller.country %>" id="country" name="country" placeholder="Country of Institute">
                             </div>
                             <div class="col">
-                                <input type="text" id="institute_name" name="institute_name"
+                                <input type="text" value="<%= seller.institute %>" id="institute_name" name="institute_name"
                                     placeholder="Name of Institute">
                             </div>
                         </div>
                         <div class="mb-2 row">
                             <div class="col">
-                                <input type="text" name="title" id="in_title" placeholder="Title">
+                                <input type="text" value="<%= seller.degree_title %>" name="title" id="in_title" placeholder="Title">
                             </div>
                             <div class="col">
-                                <input type="text" name="major" id="major" placeholder="Major">
+                                <input type="text" value="<%= seller.degree_major %>" name="major" id="major" placeholder="Major">
                             </div>
                             <div class="col">
-                                <input type="number" name="year" id="year" placeholder="Year" min="1950" max="2023">
+                                <input type="number" value="<%= seller.year_education %>" name="year" id="year" placeholder="Year" min="1950" max="2023">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="education" class="col-sm-2 col-form-label">Certifications</label>
+                    <div class="col">
+                        <label for="education" class="col-sm-2 col-form-label">Add more Certifications</label>
+                    </div>
+                    <% seller.certificates.forEach((c)=>{ %>
+                        <embed src="<%= c %>" type=""> 
+                    <% }) %>
                     <div class="col">
                         <div class="custom-file">
                             <input type="file" class="custom-file-input" id="certification" multiple>
@@ -186,7 +215,7 @@
                     <label for="email" class="col-sm-2 col-form-label">Personal Website</label>
                     <div class="col">
                         <input type="text" id="portfolio" placeholder="Personal Website Link here..."
-                            oninput="this.className = ''" name="personal_website">
+                            oninput="this.className = ''" value="<%= seller.portfolio %>" name="personal_website">
                     </div>
                 </div>
             </div>
@@ -197,14 +226,14 @@
                 <div class="mb-3 row">
                     <label for="github" class="col-sm-2 col-form-label">Github</label>
                     <div class="col">
-                        <input type="text" id="github" placeholder="Github Account link ..."
+                        <input type="text" id="github" value="<%= seller.github %>" placeholder="Github Account link ..."
                             oninput="this.className = ''" name="github">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="stackOverflow" class="col-sm-2 col-form-label">Stack Overflow</label>
                     <div class="col">
-                        <input type="text" id="stack-overflow" placeholder="stackOverflow Account link ..."
+                        <input type="text" id="stack-overflow" value="<%= seller.stack %>" placeholder="stackOverflow Account link ..."
                             oninput="this.className = ''" name="stackOverflow">
                     </div>
                 </div>
@@ -212,7 +241,7 @@
                     <label for="linkedin" class="col-sm-2 col-form-label">Linkedin</label>
                     <div class="col">
                         <input type="text" id="linkedin" placeholder="Linkedin Account link ..."
-                            oninput="this.className = ''" name="linkedin">
+                            oninput="this.className = ''" value="<%= seller.linkedin %>" name="linkedin">
                     </div>
                 </div>
             </div>
@@ -229,7 +258,19 @@
 
     <%- include('../partials/footer.ejs') %>
 
-    <script src="/js/register_seller.js"></script>
+    <script>
+        const o = document.getElementById('occupation').options;
+        const occ = document.getElementById('occupation1').innerHTML;
+        for (const op of o) {
+            console.log(op,op.innerHTML);
+            if(op.innerHTML.toLowerCase() == occ) {
+                console.log('in');
+                op.selected = true;
+            }
+        }
+    </script>
+
+    <script src="/js/update_seller.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
