--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -821,6 +821,9 @@ video {
 .justify-start {
   justify-content: flex-start;
 }
+.justify-end {
+  justify-content: flex-end;
+}
 .justify-center {
   justify-content: center;
 }
