--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -21,15 +21,14 @@
 		<div class="root py-10 ">
 			<section>
 				<div class="flex flex-row justify-center items-start w-full">
-					<div class="flex justify-center w-1/3 p-10">
+					<div class="flex justify-end w-1/2 p-5">
 						<img class="w-full" src="<%= service.main_img %>" alt="">
 					</div>
-					<div class="flex justify-center w-2/3 p-0">
-						<div class="profile">
+					<div class="flex justify-center w-1/2 p-5">
+						<div class="profile w-full">
 							<h1 class="fs-3 head " id="service_title"><%= service.seller_title %></h1>
 							<p class="hidden" id="service_id"><%= service._id %></p>
 							<div class="child-flex border-set-bottom">
-
 								<div class="w-20 h-20 rounded "><img class="w-20 h-20 rounded-full"
 										src="<%= service.seller_img %>" alt=""></div>
 
@@ -40,9 +39,7 @@
 									<span class="fa fa-star checked gold"></span>
 								</div>
 								<div class="right--most">
-									<a href="/profile/<%= service.seller_id %>">
-										<h3 class="align-star naming--pos" id="seller_name"><%= service.seller_name %></h3>
-									</a>
+										<h3 class="align-star naming--pos" id="seller_name"><a href="/profile/<%= service.seller_id %>" class="hover:cursor-pointer"><%= service.seller_name %></a></h3>
 								</div>
 							</div>
 							<article class="info-block md:decoration-4">
