--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="/public/css/home.css" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/3606b3275f.js" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="/css/styles.css" type="text/css">
+
   <style>
     .heading1 {
       text-decoration: none;
@@ -58,8 +61,9 @@
 
 <body style="background-color:#425e5e;">
   
-   <%- include('../partials/navbar.ejs',{isLoggedIn: true}) %>
+   <%- include('../partials/navbar.ejs',{isLoggedIn: login}) %>
 
+  <h1 class="mx-auto text-3xl text-white text-center">User Profile</h1>
   <div class="outer" style="display:flex">
     <div class="leftouter" style="display:block;width:30%;">
 
@@ -72,22 +76,17 @@
             <div class="line" style="color:#e2dfdf;width:15px;height:2px;"></div>
           </div>
           <div class="icon" style="width:100%;padding-top:5%;justify-content:center;align-items:center;">
-            <img src="/public/images/pro.jpg" alt="profile pic" style="width:50%;border-radius:50%">
-          </div>
-          <div>
-            <span
-              style="color: #425e5e;font-size:100%;border-width:100%;border-color:#425e5e;border-radius:100%;">.Online</span>
+            <img src="<%= user.user_img %>" alt="profile pic" style="width:50%;border-radius:50%">
           </div>
         </div>
         <div>
-          <h2><a class="heading1" href="#Tech-O-web" style="color:#425e5e;">Tech-O-Web</a></h2>
-          <p style="color:#425e5e;opacity:0.8;padding-top:0%;">@techoweb</p>
-          <p style="color:#425e5e;padding-top:0%;">you dream, we design !</p>
+          <h2><a class="heading1" href="#Tech-O-web" style="color:#425e5e;"><%= user.username %></a></h2>
+          <p style="color:#425e5e;padding-top:0%;"><%= seller.seller_desc %></p>
         </div>
 
         <div class="button-click">
-          <button><a style="text-decoration:none;">contact me</a></button>
-          <button><a style="text-decoration:none;">get a Quote</a></button>
+          <button><a style="text-decoration:none;">Contact me</a></button>
+          <button><a style="text-decoration:none;">Get a Quote</a></button>
         </div>
         <div style="padding:2% 10% 2% 10%;">
           <hr style="color:#425e5e;height:3px;background-color:#425e5e">
@@ -95,18 +94,13 @@
         <div style="display:flex;color:#425e5e;">
           <div style="text-align:left;width:45%;">
             <ul style="text-decoration:none;list-style-type:none;">
-              <li style="padding:5%;">From</li>
-              <li style="padding:5%;">Member since</li>
-              <li style="padding:5%;">Avg. response time</li>
-              <li style="padding:5%;">last delivery</li>
+              <li style="padding:5%;">Member since <%= seller.seller_from %></li>
+              <li style="padding:5%;">Avg. response time : 5hrs</li>
             </ul>
           </div>
           <div style="text-align:right;width:45%;">
             <ul style="text-decoration:none;list-style-type:none;">
-              <li style="padding:5%;">India</li>
-              <li style="padding:5%;">april 22</li>
-              <li style="padding:5%;">1 hour</li>
-              <li style="padding:5%;">19 hours</li>
+              <li style="padding:5%;"><%= seller.country %></li>
             </ul>
           </div>
 
@@ -114,7 +108,7 @@
       </div>
 
       <div class="box innerleft button-click" style="text-align:left;border:1%;border-radius:2px;padding:1% 0% 0% 0%;color:#425e5e">
-        <div style="text-align:left;display:flex;padding:8% 0% 0% 10%;"><strong>Some of my cool projects</strong> 
+        <div style="text-align:left;display:flex;padding:8% 0% 0% 10%;"><strong>Some of projects</strong> 
         </div>
         <div >
          <ul class="links" style="list-style-type:none;padding:2% 10% 8% 10%;">
@@ -127,16 +121,7 @@
       <div class="box innerleft" style="color:#425e5e; border:1%;border-radius:2px;padding:1% 0% 0% 0%;">
 
         <div style="text-align:left;padding-left:10%;">
-          <h3>Description</h3>
-        </div>
-
-        <div style="padding:0% 10% 2% 10%;text-align:left;">
-          <p>
-            We are a group of experienced website designers. Working with a 7+ year experience. We create websites for a
-            variety of industries, including real estate, hospitals, restaurants, schools, and educational institutions.
-            We also assist small businesses in expanding their enterprises by creating a beautiful and fully customised
-            online store.
-          </p>
+          <h3><%= seller.seller_desc %></h3>
         </div>
 
         <div style="padding:2% 10% 2% 10%;">
@@ -146,9 +131,9 @@
         <div>
           <ul style="list-style: none;text-align:left;">
             <li><strong>Languages</strong></li>
-            <li style="padding-top:6%;">English <span style="opacity:0.7;"> -Fluent</span></li>
-            <li style="padding-top:6%;">Hindi <strong>(हिंदी)</strong><span style="opacity:0.7;"> -Fluent</span></li>
-            <li style="padding-top:6%;">Telugu <strong>(తెలుగు)</strong><span style="opacity:0.7;"> -Fluent</span></li>
+            <% seller.languages.forEach((l)=>{ %>
+              <li style="padding-top:6%;"><%= l %> <span style="opacity:0.7;"> -Fluent</span></li>
+            <% }) %>
           </ul>
         </div>
 
@@ -159,30 +144,14 @@
         <div class="links">
           <ul style="list-style: none;text-align:left;">
             <li><strong>Linked accounts</strong></li>
-            <li style="padding-top:6%;"><a href="#linkedin">Linkedin</a></li>
-            <li style="padding-top:6%;"><a href="#github">Github</a></li>
-            <li style="padding-top:6%;"><a href="#facebook">Facebook</a></li>
+            <li style="padding-top:6%;"><a href="<%= seller.linkedin %>">Linkedin</a></li>
+            <li style="padding-top:6%;"><a href="<%= seller.github %>">Github</a></li>
+            <li style="padding-top:6%;"><a href="<%= seller.stackOverflow %>">Stack Overflow</a></li>
           </ul>
         </div>
 
         <div style="padding:2% 10% 2% 10%;">
           <hr style="color:#425e5e;height:3px;background-color:#425e5e">
-        </div>
-
-        <div style="text-align:left;padding-left:10%;">
-          <strong>Skills</strong>
-        </div>
-
-        <div class="skills">
-          <ul style="list-style: none;text-align:left;">
-
-            <li style="padding-top:6%;">Website design</li>
-            <li style="padding-top:6%;">Wordpress</li>
-            <li style="padding-top:6%;">HTML5</li>
-            <li style="padding-top:6%;">CSS3</li>
-            <li style="padding-top:6%;">Shopify</li>
-            <li style="padding-top:6%;">Bootstrap 5</li>
-          </ul>
         </div>
 
         <div style="padding:2% 10% 2% 10%;">
@@ -193,24 +162,7 @@
           <ul style="list-style: none;text-align:left;">
             <li><strong>Education</strong></li>
             <li style="padding-top:6%;">B.A. - Bachelor In Information Technology <br> <span style="opacity:0.7;">
-                Chandigarh University, India, Graduated 2010</span></li>
-            <li style="padding-top:6%;">M.B.A. - Information Technology<br><span style="opacity:0.7;">Chandigarh
-                University, India, Graduated 2013</span></li>
-          </ul>
-        </div>
-
-
-        <div style="padding:2% 10% 2% 10%;">
-          <hr style="color:#425e5e;height:3px;background-color:#425e5e">
-        </div>
-
-        <div style="padding-bottom:5%;">
-          <ul style="list-style: none;text-align:left;">
-            <li><strong>Certifications</strong></li>
-            <li style="padding-top:6%;">Diploma In Website Designing<br> <span style="opacity:0.7;"> Chandigarh
-                University 2016</span></li>
-            <li style="padding-top:6%;">Diploma In Digital Marketing<br><span style="opacity:0.7;">Chandigarh University
-                2017</span></li>
+              <%= seller.degree_title %> - <%= seller.degree_major %> <%= seller.institute %>, <%= seller.year_education %></span></li>
           </ul>
         </div>
 
@@ -220,41 +172,42 @@
     <div class="rightOuter"
       style="display:block;color:#425e5e;width:70%;border:1%;border-radius:2px;padding:1% 0% 0% 0%;padding:7% 15% 15% 5%;">
       <div><strong style="padding-left:5%;color:#e2dfdf">techoweb's gigs</strong></div>
-      <div class="box"
-        style="display:block;width:35%; border-color:#e2dfdf; border-width:2px;border-radius:2px;padding:0% 0% 0% 0%;">
-
-        <div>
-          <img src="/public/images/webdev.jpg" alt="gig propic" style="width:100%;">
-        </div>
-
-        <div style="padding:5% 0% 0% 0%;">
-          <strong style="padding:3% 0% 1% 0%;">techoweb</strong><br>
-          <span style="opacity:0.8;">level 2 seller</span>
-        </div>
-
-        <div style="padding:0% 8% 0% 8%;">
-          <hr style="color:#425e5e;height:3px;background-color:#425e5e;">
-        </div>
-
-        <div style="padding:4% 0% 10% 0%;">
-          <a href="#gig" style="text-decoration:none;color:#425e5e;">I will design a responsive wordpress website...</a>
-        </div>
-
-        <div style="padding:4% 0% 5% 0%;">
-          <strong style="text-align:left;color:#425e5e">★ 4.9<span style="opacity:0.8;">(147)</span></strong>
-        </div>
-
-        <div>
-          <hr style="color:#425e5e;height:3px;background-color:#425e5e;">
-        </div>
-
-        <div>
-          <div style="text-align:right;padding:0% 5% 5% 5%;">
-           <span style="font:100%;"><span style="font:30%;">Starting at</span><br>17500/-</span>
+      <% services.forEach((s)=>{ %>
+        <div class="box"
+          style="display:block;width:35%; border-color:#e2dfdf; border-width:2px;border-radius:2px;padding:0% 0% 0% 0%;">
+  
+          <div>
+            <img src="/public/images/webdev.jpg" alt="gig propic" style="width:100%;">
+          </div>
+  
+          <div style="padding:5% 0% 0% 0%;">
+            <strong style="padding:3% 0% 1% 0%;"><%= s.seller_fname %></strong><br>
+          </div>
+  
+          <div style="padding:0% 8% 0% 8%;">
+            <hr style="color:#425e5e;height:3px;background-color:#425e5e;">
+          </div>
+  
+          <div style="padding:4% 0% 10% 0%;">
+            <a href="#gig" style="text-decoration:none;color:#425e5e;"><%= s.seller_title %></a>
+          </div>
+  
+          <div style="padding:4% 0% 5% 0%;">
+            <strong style="text-align:left;color:#425e5e">★ <%= seller.rating %><span style="opacity:0.8;"><%= seller.numberRating %></span></strong>
+          </div>
+  
+          <div>
+            <hr style="color:#425e5e;height:3px;background-color:#425e5e;">
+          </div>
+  
+          <div>
+            <div style="text-align:right;padding:0% 5% 5% 5%;">
+             <span style="font:100%;"><span style="font:30%;">Starting at</span><br><%= s.starting_price %></span>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+      <% }) %>
   </div>
 
   <%- include('../partials/footer.ejs') %>
