--- a/views/pages/user_dash.ejs
+++ b/views/pages/user_dash.ejs
@@ -139,8 +139,7 @@
                                     <div class="buttons">
                                         <button class="btn btn-outline-primary px-4"
                                             onclick="window.location.href='/app/user/edit'">Update Profile</button>
-                                        <button class="btn btn-outline-primary px-4"
-                                            onclick="window.location.href='/app/user/delete'">Delete Profile</button>
+                                        <button class="btn btn-outline-primary px-4" id="delete">Delete Profile</button>
                                     </div>
                                 </div>
                             </div>
@@ -185,6 +184,30 @@
                         const id = s.querySelector('#viewOrder').innerHTML;
                         window.location.href = `/app/order/${id}`;
                     })
+                })
+                
+                const deleted = document.getElementById('delete');
+                deleted.addEventListener('click',async(e)=>{
+                if(confirm('Do you want to continue and Delete you account forever?'))
+                {
+                    const res = await fetch('http://localhost:5500/app/delete',{
+                    method: 'post'
+                    });
+                    if(res.ok) {
+                    alert('account successfully deleted');
+                    window.location.href = '/'
+                    }
+                    else
+                    {
+                    alert('some error occured');
+                    window.location.reload();
+                    }
+                } 
+                else 
+                {
+                    alert('You have pressed cancel!');
+                    window.location.reload()
+                }
                 })
             </script>
 
